# LewtNanny

./: .gitignore  CHANGELOG.md  CODEBASE_COMPLETION_PLAN.md  LICENSE  LewtNanny.spec  MIGRATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  add_frontier_weapons.py  attachments.json  cli.py  cli_commands.py  final_test.py  main.py  main_mvp.py  overlay.py  pyproject.toml  refresh_test.py  requirements-test.txt  requirements.txt  run_ruff_fix.py  sights_and_scopes.json  simple_test.py  start.py  test_actual_ui_path.py  test_chat_parsing.py  test_config_init.py  test_data_flow.py  test_file_monitoring.py  test_file_reading.py  test_gui.py  test_loot_detection.py  test_loot_regex.py  test_overlay_data_flow.py  test_parse_simple.py  test_parsing_simple.py  test_polling.py  test_pyqt6.py  test_qapp_signals.py  (+13 more)
.github/workflows/: ci.yml
INSPIRATION/: Plan.md
data/: attachments.db  config.json  crafting.db  leotnanny.db  resources.db  user_data.db  weapons.db  weapons.json
docs/: DEVELOPMENT_PLAN.md  FINAL_SUCCESS_REPORT.md  REFACTORING_SUMMARY.md
src/core/: __init__.py  app_config.py  database.py  database_manager.py  multi_database_manager.py
src/models/: __init__.py  game_data.py  models.py
src/services/: chat_reader.py  chat_reader_real.py  config_manager.py  cost_calculation_service.py  data_migration_service.py  game_data_service.py  loadout_service.py  twitch_bot.py  weapon_service.py
src/ui/: REFACTORING_SUMMARY.md  __init__.py  main_window.py  main_window_tabbed.py  main_window_tabbed_original.py  mainwindow.py  overlay.py  settings_dialog.py
src/ui/components/: __init__.py  analysis_charts.py  charts.py  combat_tab.py  config_tab.py  crafting_tab.py  efficiency_widget.py  simple_analysis.py  status_indicator.py  streamer_ui.py  streamlined_dashboard.py  weapon_icon.py  weapon_selection.py  weapon_selector.py  weapon_selector_modern.py
src/ui/dialogs/: __init__.py
src/ui/layout/: main_layout_creator.py
src/ui/managers/: cost_manager.py  session_manager.py
src/ui/tabs/: loot_tab_creator.py  skills_tab_creator.py
src/utils/: logger.py  paths.py
sutto/: weapons.json
sutto/src/core/: app_config.py  database.py
sutto/src/models/: models.py
sutto/src/services/: chat_reader_real.py  config_manager.py
sutto/src/ui/: main_window.py
sutto/src/ui/components/: __init__.py  weapon_selection.py  weapon_selector.py
sutto/src/ui/dialogs/: __init__.py
sutto/themes/: dark.qss  light.qss
tests/: __init__.py  conftest.py  test_chat_parser.py  test_chat_parsing.py  test_config_tab.py  test_core.py  test_game_data.py  test_mvp.py  test_pyqt6.py  test_weapon_selector.py  test_weapons.py  test_window.py
themes/: dark.qss  light.qss
tools/: add_frontier_weapons.py  analyze_chat_log.py  debug_monitoring.py  debug_parsing.py  generate_sample_data.py  initialize_multi_db.py  migrate_data.py
